[gd_scene load_steps=3 format=2]

[ext_resource path="res://levels/rootLevel.gd" type="Script" id=1]
[ext_resource path="res://main.tscn" type="PackedScene" id=3]

[node name="levelRoot" type="Node2D"]
pause_mode = 2
script = ExtResource( 1 )

[node name="pauseScreen" type="CanvasLayer" parent="."]
visible = false

[node name="quit" type="Button" parent="pauseScreen"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -100.0
margin_right = 20.0
margin_bottom = -200.0
text = "Quit"

[node name="menu" type="Button" parent="pauseScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -24.0
margin_top = -10.0
margin_right = 24.0
margin_bottom = 10.0
text = "Menu"

[node name="resume" type="Button" parent="pauseScreen"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -32.0
margin_top = 80.0
margin_right = 32.0
margin_bottom = 100.0
text = "Resume"

[node name="Paused" type="Label" parent="pauseScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -22.0
margin_top = -60.0
margin_right = 22.0
margin_bottom = -40.0
text = "Paused
"
valign = 1

[node name="Main" type="CanvasLayer" parent="."]

[node name="Main" parent="Main" instance=ExtResource( 3 )]

[connection signal="pressed" from="pauseScreen/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="pauseScreen/menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="pauseScreen/resume" to="." method="_on_resume_pressed"]

[editable path="Main/Main"]
